Hero section overflow fix

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -69,7 +69,7 @@ $brandgradient: linear-gradient(90deg, var(--purple), var(--pink));
 // Layout & Standard Elements
 
 .herosection {
-  width: 100vw;
+  width: 100%;
   min-height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -82,7 +82,7 @@ $brandgradient: linear-gradient(90deg, var(--purple), var(--pink));
   content: "";
   position: absolute;
   z-index: 0;
-  width: 100vw;
+  width: 100%;
   height: 90vh;
   background: linear-gradient(var(--offblack) 10%, rgba(0,0,0,0.2) 65%, var(--offblack));
 }
